--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
-  <script defer src="./assets/main.js"></script>
+  <script defer src="/src/assets/main.js"></script>
 </head>
 
 <body>
@@ -53,7 +53,7 @@ Mi objetivo principal, en el corto y mediano plazo, continuar aprendiendo sobre 
     </div>
     <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
       <img class="h-56 w-full object-cover sm:h-72 md:h-96 lg:w-full lg:h-full"
-        src="img/imagen.jpg" alt="foto">
+        src="/src/img/imagen.jpg" alt="foto">
     </div>
   </div>
   <div class="bg-white">
